--- a/templates/Inquiry/index.html.twig
+++ b/templates/Inquiry/index.html.twig
@@ -1,20 +1,20 @@
-{% extends 'base.html.twig' %}
+{% extends "layout.html.twig" %}
 
-{% block title %}Hello InquiryController!{% endblock %}
-
+{% block title %}お問い合わせ{% endblock %}
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+<section id="home" class="head-main-img">
+    <div class="container">
+        <div class="row text-center pad-row">
+            <div class="col-md-10 col-md-offset-1">
+                <h1><span class="black-light">お問い合わせ</span></h1>
+            </div>
+        </div>
+    </div>
+</section>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ '/Users/xearts/Projects_iam/classic-symfony/classic-symfony/src/Controller/InquiryController.php'|file_link(0) }}">src/Controller/InquiryController.php</a></code></li>
-        <li>Your template at <code><a href="{{ '/Users/xearts/Projects_iam/classic-symfony/classic-symfony/templates/inquiry/index.html.twig'|file_link(0) }}">templates/inquiry/index.html.twig</a></code></li>
-    </ul>
-</div>
+<section id="inquiry-sec">
+    <div class="container">
+        <div class="row pad-row">{{ form(form) }}</div>
+    </div>
+</section>
 {% endblock %}
