--- a/templates/Inquiry/index.html.twig
+++ b/templates/Inquiry/index.html.twig
@@ -49,7 +49,15 @@
                     <th><i class="fa fa-circle"></i></th>
                     <td>
                         {{ form_widget(form.content, {"attr": {"class": "form-control"}}) }}
+                        {{ form_label(form.content) }}
                         {{ form_errors(form.content) }}
+                    </td>
+                </tr>
+                <tr>
+                    <th><i class="fa fa-circle"></i></th>
+                    <td>
+{#                        <button type="submit">送信</button>#}
+                        {{ form_widget(form.submit, {"attr": {"class": "form-control"}}) }}
                     </td>
                 </tr>
             </table>
