--- a/templates/Common/navbar.html.twig
+++ b/templates/Common/navbar.html.twig
@@ -14,7 +14,7 @@
                 <li><a href="{{ path("concert") }}">公演情報</a></li>
                 <li><a href="{{ path("toppage") }}">楽団プロフィール</a></li>
                 <li><a href="{{ path("toppage") }}">ブログ</a></li>
-                <li><a href="{{ path("toppage") }}">お問い合わせ</a></li>
+                <li><a href="{{ path("app_inquiry_index") }}">お問い合わせ</a></li>
             </ul>
         </div>
     </div>
