--- a/templates/Inquiry/index.html.twig
+++ b/templates/Inquiry/index.html.twig
@@ -18,50 +18,52 @@
             {{ form_start(form) }}
             <table class="table">
                 <tr>
-                    <th><i class="fa fa-circle"></i></th>
+                    <th><i class="fa fa-circle"></i>お名前</th>
                     <td>
                         {{ form_widget(form.name, {"attr": {"class": "form-control"}}) }}
                         {{ form_errors(form.name) }}
                     </td>
                 </tr>
                 <tr>
-                    <th><i class="fa fa-circle"></i></th>
+                    <th><i class="fa fa-circle"></i>メールアドレス</th>
                     <td>
                         {{ form_widget(form.email, {"attr": {"class": "form-control"}}) }}
                         {{ form_errors(form.email) }}
                     </td>
                 </tr>
                 <tr>
-                    <th><i class="fa fa-circle"></i></th>
+                    <th><i class="fa fa-circle"></i>電話番号</th>
                     <td>
                         {{ form_widget(form.tel, {"attr": {"class": "form-control"}}) }}
                         {{ form_errors(form.tel) }}
                     </td>
                 </tr>
                 <tr>
-                    <th><i class="fa fa-circle"></i></th>
+                    <th><i class="fa fa-circle"></i>お問い合わせ種別</th>
                     <td>
                         {{ form_widget(form.type, {"attr": {"class": "form-control"}}) }}
                         {{ form_errors(form.type) }}
                     </td>
                 </tr>
                 <tr>
-                    <th><i class="fa fa-circle"></i></th>
+                    <th><i class="fa fa-circle"></i>お問い合わせ内容</th>
                     <td>
                         {{ form_widget(form.content, {"attr": {"class": "form-control"}}) }}
-                        {{ form_label(form.content) }}
+{#                        {{ form_label(form.content) }}#}
                         {{ form_errors(form.content) }}
                     </td>
                 </tr>
-                <tr>
-                    <th><i class="fa fa-circle"></i></th>
-                    <td>
-{#                        <button type="submit">送信</button>#}
-                        {{ form_widget(form.submit, {"attr": {"class": "form-control"}}) }}
-                    </td>
-                </tr>
             </table>
+            <div class="text-center">
+            <tr>
+                <td>
+                    {#                        <button type="submit">送信</button>#}
+                    {{ form_widget(form.submit, {"attr": {"class": "form-control"}}) }}
+                </td>
+            </tr>
+            </div>
         </div>
+        {{ form_end(form) }}
     </div>
 </section>
 {% endblock %}
