156ページまで

--- a/templates/Toppage/index.html.twig
+++ b/templates/Toppage/index.html.twig
@@ -53,5 +53,5 @@
 {{ include("Common/information.html.twig") }}
 
 {#{{ render(controller("AppBundle:Blog:latestList")) }}#}
-    {{ render(controller("App\\Controller\\BlogController:latestListAction")) }}
+    {{ render(controller("App\\Controller\\BlogController:latestList")) }}
 {% endblock %}
