--- a/templates/Blog/latestList.html.twig
+++ b/templates/Blog/latestList.html.twig
@@ -3,7 +3,9 @@
 <body>
 <div>新着ブログ記事</div>
 {% for blog in blogList %}
-    <li>[{{ blog.targetDate }}] {{ blog.title }}</li>
+    <li>[{{ blog.targetDate|date('Y年m月d日') }}]
+        {{ blog.title }}
+    </li>
 {% endfor %}
 </body>
 </html>
