--- a/templates/Admin/Inquiry/index.html.twig
+++ b/templates/Admin/Inquiry/index.html.twig
@@ -5,15 +5,15 @@
 {% block body %}
 <h2 class="sub-header">お問い合わせ管理</h2>
 
-<div>
-    {{ form_start(form, {'attr': {'id':'searchForm', 'novalidate': 'novalidate'}}) }}
-    検索：{{ form_widget(form.search) }}
+{#<div>#}
+{#    {{ form_start(form, {'attr': {'id':'searchForm', 'novalidate': 'novalidate'}}) }}#}
+{#    検索：{{ form_widget(form.search) }}#}
 
-    {{ form_widget(form.submit, {"attr": {"class":"btn btn-default searchButton"}}) }}
-    {{ form_end(form) }}
+{#    {{ form_widget(form.submit, {"attr": {"class":"btn btn-default searchButton"}}) }}#}
+{#    {{ form_end(form) }}#}
 
-    <a class="btn btn-default downloadButton">CSVダウンロード</a>
-</div>
+{#    <a class="btn btn-default downloadButton">CSVダウンロード</a>#}
+{#</div>#}
 
 <table class="table table-striped">
     <thead>
@@ -41,16 +41,16 @@
 </table>
 {% endblock %}
 
-{% block javascripts %}
-{{ parent() }}
-<script type="text/javascript">
-$('.downloadButton').click(function() {
-    $('#searchForm').attr('action', '{{ path("app_admininquirylist_index", {"_format":"csv"}) }}');
-    $('#searchForm').submit();
-});
-$('.searchButton').click(function() {
-    $('#searchForm').attr('action', '{{ path("app_admininquirylist_index", {"_format":"html"}) }}');
-    $('#searchForm').submit();
-});
-</script>
-{% endblock %}
+{#{% block javascripts %}#}
+{#{{ parent() }}#}
+{#<script type="text/javascript">#}
+{#$('.downloadButton').click(function() {#}
+{#    $('#searchForm').attr('action', '{{ path("app_admininquirylist_index", {"_format":"csv"}) }}');#}
+{#    $('#searchForm').submit();#}
+{#});#}
+{#$('.searchButton').click(function() {#}
+{#    $('#searchForm').attr('action', '{{ path("app_admininquirylist_index", {"_format":"html"}) }}');#}
+{#    $('#searchForm').submit();#}
+{#});#}
+{#</script>#}
+{#{% endblock %}#}
