--- a/templates/Admin/Common/menu.html.twig
+++ b/templates/Admin/Common/menu.html.twig
@@ -1,4 +1,4 @@
 <ul class="nav nav-sidebar">
-    <li><a href="{{ path("app_admininquirylist_index") }}">お問い合わせ管理</a></li>
-    <li><a href="{{ path("app_admininquirylist_index") }}">ブログ管理</a></li>
+    <li><a href="{{ path("admin_inquiry_list_index") }}">お問い合わせ管理</a></li>
+    <li><a href="">ブログ管理</a></li>
 </ul>
