--- a/templates/Admin/Inquiry/index.html.twig
+++ b/templates/Admin/Inquiry/index.html.twig
@@ -33,7 +33,7 @@
             <td>{{ inquiry.name }}</td>
             <td>{% if inquiry.type == 0 %}公演について{% else %}その他{% endif %}</td>
             <td>
-{#                <a class="btn btn-default" href="{{ path("app_admininquiryedit_input", {"id": inquiry.id}) }}">詳細</a>#}
+                <a class="btn btn-default" href="{{ path("admin_inquiry_edit_input", {"id": inquiry.id}) }}">詳細</a>
             </td>
         </tr>
     {% endfor %}
