--- a/templates/Admin/Inquiry/index.html.twig
+++ b/templates/Admin/Inquiry/index.html.twig
@@ -5,15 +5,15 @@
 {% block body %}
 <h2 class="sub-header">お問い合わせ管理</h2>
 
-{#<div>#}
-{#    {{ form_start(form, {'attr': {'id':'searchForm', 'novalidate': 'novalidate'}}) }}#}
-{#    検索：{{ form_widget(form.search) }}#}
+<div>
+    {{ form_start(form, {'attr': {'id':'searchForm', 'novalidate': 'novalidate'}}) }}
+    検索：{{ form_widget(form.search) }}
 
-{#    {{ form_widget(form.submit, {"attr": {"class":"btn btn-default searchButton"}}) }}#}
-{#    {{ form_end(form) }}#}
+    {{ form_widget(form.submit, {"attr": {"class":"btn btn-default searchButton"}}) }}
+    {{ form_end(form) }}
 
 {#    <a class="btn btn-default downloadButton">CSVダウンロード</a>#}
-{#</div>#}
+</div>
 
 <table class="table table-striped">
     <thead>
@@ -33,7 +33,7 @@
             <td>{{ inquiry.name }}</td>
             <td>{% if inquiry.type == 0 %}公演について{% else %}その他{% endif %}</td>
             <td>
-                <a class="btn btn-default" href="{{ path("admin_inquiry_edit_input", {"id": inquiry.id}) }}">詳細</a>
+                <a class="btn btn-default" href="{{ path("admin_inquiry_edit", {"id": inquiry.id}) }}">詳細</a>
             </td>
         </tr>
     {% endfor %}
